--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,7 @@
 11 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* db-mysql/mysql-api.lisp: Fix int vs. long slots in foreign
 	structures found by testing with AllegroCL 7.0b AMD64.
+	* db-*/*-loader.lisp: Load 64-bit libraries on 64-bit platorms
 	* sql/objects.lisp: Initial caching support for SELECT
 	* tests/test-oodml.lisp: Avoid using cache when testing select.
 	* sql/kmr-mop.lisp: Explicitly check slot order and
