--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 11 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* db-odbc/*.lisp: Add a layer of indirection to foreign-type
+	of ODBC longs since this type can vary on 64-bit platforms depending
+	upon the compilation options of unixODBC.
 	* db-mysql/mysql-api.lisp: Fix int vs. long slots in foreign
 	structures found by testing with AllegroCL 7.0b AMD64.
 	* db-*/*-loader.lisp: Load 64-bit libraries on 64-bit platorms
