--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
-11 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+12 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.16: CLSQL now fully supports AllegroCL AMD64
 	* db-odbc/odbc-api.lisp: work around return-type bug [spr28889] in
 	Allegro 7.0beta AMD64
 	* db-odbc/*.lisp: Add a layer of indirection to foreign-type
