r9336: 12 May 2004 Kevin Rosenberg (kevin@rosenberg.net)         * sql/sql.lisp: Add FOR-EACH-ROW macro from clsql-classic/sql.lisp         * clsql-classic: Remove system and subdirectory         * clsql-base: Remove system and subdirectory and         fold into clsql system

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,10 @@
 12 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* sql/sql.lisp: Add FOR-EACH-ROW macro from clsql-classic/sql.lisp
+	* clsql-classic: Remove system and subdirectory
+	* clsql-base: Remove system and subdirectory and
+	fold into clsql system
+	
+12 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.16: CLSQL now fully supports AllegroCL AMD64
 	* db-odbc/odbc-api.lisp: work around return-type bug [spr28889] in
 	Allegro 7.0beta AMD64
