--- a/ChangeLog
+++ b/ChangeLog
@@ -7,6 +7,8 @@
 	* clsql-classic: Remove system and subdirectory
 	* clsql-base: Remove system and subdirectory and
 	fold into clsql system
+	* doc/intro.xml: Remove reference to old clsql-base. Add x86_64
+	as supported platform.
 	
 12 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.16: CLSQL now fully supports AllegroCL AMD64
