--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.17-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 13 May 2004 04:48:28 -0600
+
 cl-sql (2.10.16-1) unstable; urgency=low
 
   * New upstream
