--- a/TODO
+++ b/TODO
@@ -22,14 +22,7 @@ COMMONSQL SPEC
 
  >> Symbolic SQL syntax 
 
-      o Complete sql expressions (see operations.lisp)
-
-         nvl (Oracle specific) 
-         userenv (Oracle specific) 
-	 minus (Oracle specific: does the same as EXCEPT) 
-
-      o variables (e.g., table identifiers) should be instantiated at runtime 
-
+      o userenv (Oracle specific but deprecated in Oracle 9) 
 
 VARIANCES FROM COMMONSQL
 
