--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,5 @@
 15 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* Version 2.10.18: Caching and refreshing complete 
+	* Version 2.10.18
 	* sql/objects.lisp: implement UPDATE-OBJECT-JOINS,
 	implement REFRESH for SELECT.
 	* tests/test-oodml.lisp: Add tests for deferred retrieval,
