--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.18-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Sat, 15 May 2004 19:30:06 -0600
+
 cl-sql (2.10.17-1) unstable; urgency=low
 
   * New upstream
