--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,6 @@
 15 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.18
+	* db-oracle/*.lisp: initial port to UFFI
 	* sql/objects.lisp: implement UPDATE-OBJECT-JOINS,
 	implement REFRESH for SELECT.
 	* tests/test-oodml.lisp: Add tests for deferred retrieval,
