--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+16 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
+	* sql/syntax.lisp: added condition to the reader macro to treat [*] 
+	as a column identifier (rather than an operation) for CommonSQL 
+	compatibility. 
+	* tests/test-fdml.lisp: add tests for ORDER-BY and SET-OPERATION 
+	keword args to SELECT, [*] as column identifier, new MAP-QUERY 
+	behaviour and the ANY and ALL operators in subqueries. 
+	* tests/test-init.lisp: add set-operation and subquery tests to 
+	appropriate skip lists. 
+
 15 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.18
 	* sql/db-interface.lisp: Add new db-type-has-union? 
