--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+16 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* doc/TODO: New file
+
 16 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* sql/syntax.lisp: added condition to the reader macro to treat [*] 
 	as a column identifier (rather than an operation) for CommonSQL 
@@ -15,7 +18,6 @@
 	with object queries. 
 
 15 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
-	* Version 2.10.18
 	* sql/db-interface.lisp: Add new db-type-has-union? 
 	since Mysql 3.23 does not support unions.
 	* sql/test-init.lisp: Don't try union tests on database
