--- a/ChangeLog
+++ b/ChangeLog
@@ -2,7 +2,8 @@
 	* doc/TODO: New file
 	* test/test-fdml.lisp: Added FDML/SELECT/34 to test
 	run-time instantiation of variables in reader macros.
-	* TODO: Remove item already complete
+	* TODO: Remove item already complete. Add note about
+	condition variances
 	
 16 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* sql/syntax.lisp: added condition to the reader macro to treat [*] 
