--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 16 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* test/test-utils.lisp: Add oracle to specs and list of backends
 	* doc/TODO: New file
 	* test/test-fdml.lisp: Added FDML/SELECT/34 to test
 	run-time instantiation of variables in reader macros.
