--- a/doc/TODO
+++ b/doc/TODO
@@ -7,7 +7,7 @@ DOCUMENTATION TO DO LIST
 2. Underdocumented CommonSQL features:
 
  - Retrieval immediate
- - SQL operators: ||, SUBSTR, EXCEPT, INTERSECT, UNION ...
+ - SQL operators: ||, SUBSTR, MINUS, INTERSECT, UNION, NVL 
 
 2. CLSQL extensions to CommonSQL
 
@@ -16,7 +16,8 @@ DOCUMENTATION TO DO LIST
  - New types such as wall-time, boolean, and bigint
 
  - SQL operators: group-by, limit, not-null, ==, is, having, the, uplike,
-   sql-view-class (just from a quick scan of operations.lisp)
+   sql-view-class, coalesce, except (just from a quick scan of 
+   operations.lisp)
 
  - FDDL: list-views, view-exists-p, list-indexes, list-table-indexes,
    index-exists-p, create-sequence, drop-sequence, list-sequences,
@@ -24,9 +25,29 @@ DOCUMENTATION TO DO LIST
 
  - OODML: *db-auto-sync*
 
-4. Documenting lower level, non-CommonSQL functions like connection
-   pools and database-query-result-set. Some of this is already done.
+ - SELECT: additional keyword arguments accepted include :LIMIT, :OFFSET, 
+   :INNER-JOIN and :ON. 
 
-5. Notes on any features unsupported by each of the backends.
+4. Documenting lower level, non-CommonSQL functions (some of this is already 
+   done). 
 
+ - connection pools
+ - database-query-result-set 
+
+5. Notes on any peculiarities of each of the backends (e.g., unsupported 
+   features, notable extensions etc.). 
+
+ - MYSQL 
+
+   drop-index:   requires a table to be specified with the :from parameter
+   views:        mysql does not support views  
+   queries:      nested subqueries are not supported
+   syntax:       doesn't support the sql concatenation operator (||). 
+                 doesn't support INTERSECT/EXCEPT set operations. 
+
+ - SQLITE 
+
+   connection:   specifying ":memory:" gives you an SQLite database in RAM.
+   create-view:  column-list parameter not supported 
+   syntax:       doesn't support the sql SUBSTRING operator. 
 
