--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+19 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+        * sql/package.lisp: Export initialize-database-type and
+	*initialize-database-types* from CLSQL package.
+
 18 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
         * sql/table.lisp: Add PURGE to drop command for oracle 10g backend.
 	To handle this difference, will need to add a new database-drop-table
