--- a/doc/TODO
+++ b/doc/TODO
@@ -4,6 +4,8 @@ DOCUMENTATION TO DO LIST
 
  - Ideally, this will be extremely minimal
 
+ - The SQL syntax state functions are macros in CLSQL. 
+
 2. Underdocumented CommonSQL features:
 
  - Retrieval immediate
@@ -27,6 +29,11 @@ DOCUMENTATION TO DO LIST
 
  - SELECT: additional keyword arguments accepted include :LIMIT, :OFFSET, 
    :INNER-JOIN and :ON. 
+
+ - SQL-RECORDING-P: also accepts :both and :either values for the TYPE 
+   parameter. 
+
+ - SQL-EXPRESSION: also accepts a :params keyword arg which is passed 
 
 4. Documenting lower level, non-CommonSQL functions (some of this is already 
    done). 
