--- a/ChangeLog
+++ b/ChangeLog
@@ -7,7 +7,11 @@
 19 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
         * sql/package.lisp: Export initialize-database-type and
 	*initialize-database-types* from CLSQL package.
-
+	* sql/conditions.lisp: Add new CommonSQL compatible conditions,
+	remove old CLSQL conditions.
+	* sql/loop-extensions.lisp: Make errors of type sql-user-error
+	* */*.lisp: Convert to from old to new conditions
+	
 18 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
         * sql/table.lisp: Add PURGE to drop command for oracle 10g backend.
 	To handle this difference, will need to add a new database-drop-table
