--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+cl-sql (2.10.19-1) unstable; urgency=low
+
+  * New upstream
+  * Fix depends [patch from Erik Naggum]
+	
+ -- Kevin M. Rosenberg <kmr@debian.org>  Wed, 19 May 2004 16:33:07 -0600
+
 cl-sql (2.10.18-1) unstable; urgency=low
 
   * New upstream
