--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,11 @@
+19 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* sql/db-interface.lisp: Add more default methods
+	* sql/objects.lisp: Add explicit table name to order-by parameters
+	in find-all when only one table to avoid selecting a duplicate row.
+	Fix error in FIND-ALL when using :order-by such as (([foo] :asc))
+	as previous logic was adding two fields (foo asc) to SELECT query.
+	* db-oracle/*.lisp: Much improvements, now passes 90% of test suite
+	
 19 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* sql/recording.lisp: reworked docstrings. 
 	* sql/syntax.lisp: reworked docstrings. 
