--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	in find-all when only one table to avoid selecting a duplicate row.
 	Fix error in FIND-ALL when using :order-by such as (([foo] :asc))
 	as previous logic was adding two fields (foo asc) to SELECT query.
+	Make :result-types :auto be the default for object selections.
 	* db-oracle/*.lisp: Much improvements, now passes 90% of test suite
 	
 19 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
