--- a/ChangeLog
+++ b/ChangeLog
@@ -1,10 +1,14 @@
 19 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.18 released: New condition hierarchy to be compatible
+	with CommonSQL -- not backward compatible with previous CLSQL.
 	* sql/db-interface.lisp: Add more default methods
 	* sql/objects.lisp: Add explicit table name to order-by parameters
 	in find-all when only one table to avoid selecting a duplicate row.
 	Fix error in FIND-ALL when using :order-by such as (([foo] :asc))
 	as previous logic was adding two fields (foo asc) to SELECT query.
 	Make :result-types :auto be the default for object selections.
+	Properly handle caching key when using multiple order-by with asc/desc
+	directions.
 	* db-oracle/*.lisp: Much improvements, now passes 90% of test suite
 	
 19 May 2004 Marcus Pearce (m.t.pearce@city.ac.uk) 
