--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+20 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* Version 2.10.19
+	* sql/conditions.lisp: Fix cerror
+	
 19 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
 	* Version 2.10.18 released: New condition hierarchy to be compatible
 	with CommonSQL -- not backward compatible with previous CLSQL.
