--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+cl-sql (2.10.19-1) unstable; urgency=low
+
+  * New upstream
+
+ -- Kevin M. Rosenberg <kmr@debian.org>  Thu, 20 May 2004 04:54:53 -0600
+
 cl-sql (2.10.18-1) unstable; urgency=low
 
   * New upstream
