--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,5 @@
 20 May 2004 Kevin Rosenberg (kevin@rosenberg.net)
+	* db-oracle/oracle-sql: Use clsql-specific error conditions. Use owner keyword.
 	* db-oracle/make9.sh: add makefile for building with Oracle 9 client
 	libraries
 	* sql/table.lisp: Add logic for dealing with Oracle 10g vs. previous
