r9427: 22 May 2004 Kevin Rosenberg         * Oracle backend now fails 6 out of 200 tests         * sql/sql.lisp: Ensure recyclebin is purged for oracle in         TRUNCATE-DATABASE         * db-oracle/oracle-sql.lisp: Add sequence functions, fix use of         of owner phrases         * db-oracle/oracle-objects.lisp: Fix type specifiers         * tests/test-fddl.lisp: Allow :varchar2 and :number as data types         * tests/test-init.lisp: Properly get username from Oracle connection-spec         * TODO: Add that tests are needed for owner phrases

--- a/TODO
+++ b/TODO
@@ -8,6 +8,7 @@ TESTS TO ADD
 * test *db-auto-sync* 
 * for-each-row macro
 * universal-time 
+* owner phrases for postgresql and oracle backends
 
 COMMONSQL INCOMPATIBILITY
 
