r9429: add large table test needed

--- a/TODO
+++ b/TODO
@@ -9,6 +9,8 @@ TESTS TO ADD
 * for-each-row macro
 * universal-time 
 * owner phrases for postgresql and oracle backends
+* test of large table with large numbers of rows, greater than 2x the number of
+  rows (200) returned by the oracle backend at a time
 
 COMMONSQL INCOMPATIBILITY
 
