--- a/TODO
+++ b/TODO
@@ -11,11 +11,14 @@ TESTS TO ADD
 * owner phrases for postgresql and oracle backends
 * test of large table with large numbers of rows, greater than 2x the number of
   rows (200) returned by the oracle backend at a time
+* test mixed case table identifiers and column identifiers
 
 COMMONSQL INCOMPATIBILITY
 
+   o doesn't support CHAR and NUMBER types as shown on CREATE-TABLE reference page
+   o (string n) => VARCHAR(n) rather than CHAR(n)
    o userenv (Oracle specific but deprecated in Oracle 9) 
-
+ 
 VARIANCES FROM COMMONSQL
 
 COMMIT,ROLLBACK,START-TRANSACTION: 
