--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,7 @@
 22 May 2004 Kevin Rosenberg
+	* TODO: Added 2 variances from CommonSQL
+	* sql/table.lisp: Don't convert string table name to a symbol.
+	* sql/classes.lisp: Honor case of string identifiers
 	* Oracle backend now fails 6 out of 200 tests
 	* sql/sql.lisp: Ensure recyclebin is purged for oracle in 
 	TRUNCATE-DATABASE
