--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,9 @@
 22 May 2004 Kevin Rosenberg
 	* Version 2.10.21 released
 	* sql/classes.lisp: honor case of string tables when outputting queries 
-	
+	* sql/objects.lisp: Add database type to default database-get-type-specifier method
+	* sql/sql.lisp:  Add database type to default database-abort-transaction method
+
 22 May 2004 Kevin Rosenberg
 	* Version 2.10.20 released: Oracle backend now fails 6 out of 200 tests
 	* TODO: Added 2 variances from CommonSQL. Add tests for owner phrases
