--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 22 May 2004 Kevin Rosenberg
 	* Version 2.10.21 released
+	* sql/sequences.lisp: Move generic sequence functions here from db-sqlite,
+	db-odbc, and db-aodbc.
 	* sql/*.lisp: Add db-type parameter to generic functions READ-SQL-VALUE,
 	DATABASE-GET-TYPE-SPECIFIER, and OUTPUT-SQL-VALUE-AS-TYPE. Update methods to use these.
 	* sql/generic-postgresql.lisp, sql/generic-odbc.lisp: New files
