--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+23 May 2004 Kevin Rosenberg
+	* sql/kmr-mop.lisp, sql/objects.lisp: Since SBCL is the only implementation that
+	has reversed class slots, change the default for ordered-class-slots so that slots
+	are now in the same order an in the def-view-class.
+	
 22 May 2004 Kevin Rosenberg
 	* Version 2.10.21 released
 	* sql/sequences.lisp: Move generic sequence functions here from db-sqlite,
