--- a/ChangeLog
+++ b/ChangeLog
@@ -3,6 +3,7 @@
 	* tests/test-init.lisp: capitalize odbc backend name in banner
 	* CONTRIBUTORS: Add note about Marcus' excellent work
 	* sql/oodml.lisp: Removed old stub function 	
+	* clsql.asd: Use module names in current package rather than keyword package
 	
 24 May 2004: Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* db-postgresql-socket/postgresql-socket-sql.lisp: replace 
