--- a/ChangeLog
+++ b/ChangeLog
@@ -4,6 +4,7 @@
 	* CONTRIBUTORS: Add note about Marcus' excellent work
 	* sql/oodml.lisp: Removed old stub function 	
 	* clsql.asd: Use module names in current package rather than keyword package
+	* db-oracle/oracle-sql.lisp: Don't trim trailing spaces
 	
 24 May 2004: Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* db-postgresql-socket/postgresql-socket-sql.lisp: replace 
