--- a/ChangeLog
+++ b/ChangeLog
@@ -4,7 +4,8 @@
 	* CONTRIBUTORS: Add note about Marcus' excellent work
 	* sql/oodml.lisp: Removed old stub function 	
 	* clsql.asd: Use module names in current package rather than keyword package
-	* db-oracle/oracle-sql.lisp: Don't trim trailing spaces
+	* db-oracle/oracle-sql.lisp: Don't trim trailing spaces. Prevent interrupts
+	in setting sequence position
 	* tests/test-init.lisp: Skip 2 tests on Oracle which have unsupported syntax 
 	
 24 May 2004: Marcus Pearce (m.t.pearce@city.ac.uk) 
