--- a/TODO
+++ b/TODO
@@ -11,18 +11,16 @@ TESTS TO ADD
 * owner phrases for postgresql and oracle backends
 * test of large table with large numbers of rows, greater than 2x the number of
   rows (200) returned by the oracle backend at a time
+* Number and Char field types
 
 COMMONSQL INCOMPATIBILITY
 
-   o doesn't support CHAR and NUMBER types as shown on CREATE-TABLE reference page
-   o (string n) => VARCHAR(n) rather than CHAR(n)
    o userenv (Oracle specific but deprecated in Oracle 9) 
  
 VARIANCES FROM COMMONSQL
 
-COMMIT,ROLLBACK,START-TRANSACTION: 
- When COMMIT or ROLLBACK are called outside of WITH-TRANSACTION, an sql 
- transaction must be explicitly started first with START-TRANSACTION. 
+CLSQL starts with in transaction AUTOCOMMIT mode. To begin a transaction,
+START-TRANSACTION has to be called.
 
 OPTIMIZATIONS
  
