--- a/ChangeLog
+++ b/ChangeLog
@@ -13,6 +13,7 @@
 	and read-sql-value for NUMBER and CHAR.
 	* sql/base-classes.lisp: Add autocommit slot
 	* sql/transaction.lisp: Added autocommit processing, mild cleaning.
+	* doc/intro.xml: Add Oracle
 	
 24 May 2004: Marcus Pearce (m.t.pearce@city.ac.uk) 
 	* db-postgresql-socket/postgresql-socket-sql.lisp: replace 
